syntax = "proto3";

option csharp_namespace = "ConnectFour.Shared";

import "google/protobuf/empty.proto";

service Game {
    rpc JoinGame(JoinGameRequest) returns (JoinGameResponse);
    rpc PlayTurn(PlayTurnRequest) returns (PlayTurnResponse);
    rpc GetGameState(google.protobuf.Empty) returns (GameState);
}

message Player {
    int32 id = 1;
    string name = 2;
    string symbol = 3;
}

message Position {
    int32 row = 1;  
    int32 column = 2;
}

message JoinGameRequest {
    string player_name = 1;
}

message JoinGameResponse {
    Player player = 1;
    GameState game_state = 2;
}

message GameState {
    repeated string board = 1;
    Player current_player = 2;
    bool game_over = 3;
    string winner = 4;
}

message PlayTurnRequest {
    int32 player_id = 1;
    Position position = 2;
}

message PlayTurnResponse {
    GameState game_state = 1;
}